grammar.js
    program: ($) =>
      seq(
        // any number of transactions, statements, or blocks with a terminating ;
        repeat(seq(choice($.transaction, $.statement, $.block), ';')),
        // optionally, a single statement without a terminating ;
        optional($.statement)
      ),

    keyword_select: (_) => make_keyword('select'),
    statement: ($) =>
      seq(
        optional(seq($.keyword_explain, optional($.keyword_analyze), optional($.keyword_verbose))),
        choice($._ddl_statement, $._dml_write, optional_parenthesis($._dml_read))
      ),

    _ddl_statement: ($) =>
      choice(
        $._create_statement,
        $._alter_statement,
        $._drop_statement,
        $._rename_statement,
        $._optimize_statement,
        $._merge_statement,
        $.comment_statement,
        $.set_statement,
        $.reset_statement
      ),

    _dml_write: ($) =>
      seq(
        seq(
          optional($._cte),
          choice(
            $._delete_statement,
            $._insert_statement,
            $._update_statement,
            $._truncate_statement,
            $._copy_statement
          )
        )
      ),

    _dml_read: ($) =>
      seq(
        optional(optional_parenthesis($._cte)),
        optional_parenthesis(choice($._select_statement, $.set_operation))
      ),

    select: ($) => seq($.keyword_select, seq(optional($.keyword_distinct), $.select_expression)),

    select_expression: ($) => seq($.term, repeat(seq(',', $.term))),

    term: ($) => seq(field('value', choice($.all_fields, $._expression)), optional($._alias)),

    _alias: ($) => seq(optional($.keyword_as), field('alias', $.identifier)),

    _expression: ($) =>
      prec(
        1,
        choice(
          $.literal,
          alias($._qualified_field, $.field),
          $.parameter,
          $.list,
          $.case,
          $.window_function,
          $.subquery,
          $.cast,
          alias($.implicit_cast, $.cast),
          $.exists,
          $.invocation,
          $.binary_expression,
          $.subscript,
          $.unary_expression,
          $.array,
          $.interval,
          $.between_expression,
          $.parenthesized_expression
        )
      ),

    literal: ($) =>
      prec(
        2,
        choice(
          $._integer,
          $._decimal_number,
          $._literal_string,
          $._bit_string,
          $._string_casting,
          $.keyword_true,
          $.keyword_false,
          $.keyword_null
        )
      ),
    _double_quote_string: (_) => /"[^"]*"/,
    // The norm specify that between two consecutive string must be a return,
    // but this is good enough.
    _literal_string: ($) =>
      prec(
        1,
        choice(
          $._single_quote_string,
          $._double_quote_string,
          alias(
            seq(
              field('tag', $._dollar_quoted_string_start_tag_label),
              field('value', $._dollar_quoted_string),
              $._dollar_quoted_string_end_tag
            ),
            $.string
          )
        )
      ),
    _integer: ($) =>
      seq(
        optional(choice('-', '+')),
        /(0[xX][0-9A-Fa-f]+(_[0-9A-Fa-f]+)*)|(0[oO][0-7]+(_[0-7]+)*)|(0[bB][01]+(_[01]+)*)|(\d+(_\d+)*(e[+-]?\d+(_\d+)*)?)/
      ),
    _decimal_number: ($) =>
      seq(
        optional(choice('-', '+')),
        /((\d+(_\d+)*)?[.]\d+(_\d+)*(e[+-]?\d+(_\d+)*)?)|(\d+(_\d+)*[.](e[+-]?\d+(_\d+)*)?)/
      ),
    _bit_string: ($) => seq(/[bBxX]'([^']|'')*'/, repeat(/'([^']|'')*'/)),
    // The identifier should be followed by a string (no parenthesis allowed)
    _string_casting: ($) => seq($.identifier, $._single_quote_string),

    identifier: ($) => choice($._identifier, $._double_quote_string, /`([a-zA-Z_][0-9a-zA-Z_]*)`/),
    _identifier: (_) => /[a-zA-Z_][0-9a-zA-Z_]*/
  }
});

function unsigned_type($, type) {
  return choice(
    seq($.keyword_unsigned, type),
    seq(type, optional($.keyword_unsigned), optional($.keyword_zerofill))
  );
}

function optional_parenthesis(node) {
  return prec.right(choice(node, wrapped_in_parenthesis(node)));
}

function wrapped_in_parenthesis(node) {
  if (node) {
    return seq('(', node, ')');
  }
  return seq('(', ')');
}

function parametric_type($, type, params = ['size']) {
  return prec.right(
    1,
    choice(
      type,
      seq(
        type,
        wrapped_in_parenthesis(
          seq(
            // first parameter is guaranteed, shift it out of the array
            field(params.shift(), alias($._natural_number, $.literal)),
            // then, fill in the ", next" until done
            ...params.map((p) => seq(',', field(p, alias($._natural_number, $.literal))))
          )
        )
      )
    )
  );
}

function comma_list(field, requireFirst) {
  sequence = seq(field, repeat(seq(',', field)));

  if (requireFirst) {
    return sequence;
  }

  return optional(sequence);
}

function paren_list(field, requireFirst) {
  return wrapped_in_parenthesis(comma_list(field, requireFirst));
}

function make_keyword(word) {
  str = '';
  for (var i = 0; i < word.length; i++) {
    str = str + '[' + word.charAt(i).toLowerCase() + word.charAt(i).toUpperCase() + ']';
  }
  return new RegExp(str);
}
