test/corpus/literals.txt
================================================================================
Hexadecimal number
================================================================================

SELECT 0xAA;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
binary number
================================================================================

SELECT 0b1010;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
big integer with _ separators
================================================================================

SELECT 1_000_000_000;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
integer with exponent with _ separators
================================================================================

SELECT 12e1_000;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
decimal with exponent
================================================================================

SELECT .2e-1_000;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
positive number
================================================================================

SELECT +1;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
bit string
================================================================================

SELECT b'1010';

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
bit string (hexa)
================================================================================

SELECT x'AF';

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
multi line string
================================================================================

SELECT 'hello '
'world';

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
unicode string
================================================================================

SELECT  u&'\041f\0440\0438\0432\0456\0442 '
'\0421\0432\0456\0442';

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
string casting
================================================================================

SELECT int '123';

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal
            (identifier)))))))

================================================================================
dollar quoted string (no tag)
================================================================================

SELECT $${"some":"json"}$$;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
dollar quoted string (tagged)
================================================================================

SELECT $json${"some":"json"}$json$;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))
